WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99621
[EFL][WK2] Memory leak in ewk_download_job_response_set()
https://bugs.webkit.org/show_bug.cgi?id=99621
Summary
[EFL][WK2] Memory leak in ewk_download_job_response_set()
Chris Dumez
Reported
2012-10-17 11:29:21 PDT
Ewk_Download_Job::response member is now a RefPtr so we should no longer ref it explicitly in ewk_download_job_response_set().
Attachments
Patch
(3.79 KB, patch)
2012-10-17 11:37 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-17 11:37:21 PDT
Created
attachment 169224
[details]
Patch
WebKit Review Bot
Comment 2
2012-10-17 15:14:45 PDT
Comment on
attachment 169224
[details]
Patch Clearing flags on attachment: 169224 Committed
r131654
: <
http://trac.webkit.org/changeset/131654
>
WebKit Review Bot
Comment 3
2012-10-17 15:14:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug