[EFL][WK2] Memory leak in ewk_download_job_response_set() https://bugs.webkit.org/show_bug.cgi?id=99621

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-17
Reviewed by Kenneth Rohde Christiansen.

No longer call ewk_url_response_ref() on the response
object in ewk_download_job_response_set() since it will
be ref'd when assigning to the RefPtr member already.

* UIProcess/API/efl/ewk_context_download_client.cpp:
(didReceiveResponse):
* UIProcess/API/efl/ewk_download_job.cpp:
(ewk_download_job_response_set):
* UIProcess/API/efl/ewk_download_job_private.h: Remove several unimplemented functions.

Canonical link: https://commits.webkit.org/117609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131654 268f45cc-cd09-0410-ab3c-d52691b4dbfc